21-07-2025 = = Version 1.6.2 =
* Update: woocommerce style product filters updated.

11-07-2025 = = Version 1.6.2 =
* Update: array( 'in_footer' => true, 'strategy'  => 'async',) attribute added in wp_enqueue_script.

08-07-2025 = = Version 1.6.1 =
* Update: Style improved.

27-06-2025 = = Version 1.6.0 =
* Update: woo-login-extend.php new created to make Woocommerce acoount field extend.
* Update: Woo-login extend showing popup after registration added.
* Update: Cart.php removed & new design added because every time when woocommerce updates it starts showing update your outdated template.
* Update: Color issues resolved.
* Update: Style updated.
* Update: Block Cart Page Style Updated.

18-06-2025 = = Version 1.5.15 =
* Update: Starter content code commented in init.php & in functions.php 
   // $thsm_starter_content = new Th_Shop_Mania_Starter_Content();
   // add_theme_support( 'starter-content', $thsm_starter_content->get() );

* add_action( 'wp_enqueue_scripts', 'th_shop_mania_blocks_library', 1005 ); added to support 
wp-block-library, wp-block-library-theme, wc-block-style ,wc-blocks-style.
* screenshot changed.

16-06-2025 = = Version 1.5.14 =
* Update: update description.

14-06-2025 = = Version 1.5.13 =
* Update: update description.
* Update: rtl issue fixed.

28-05-2025 = = Version 1.5.12 =
* Update: Tested with WooCommerce 9.8.5 and style updated.

16-04-2025  = Version 1.5.11 =
* Update: Tested with WordPress 6.8.

05-04-2025  = Version 1.5.10 =
* Update: WooCommerce issues resolved.
* Update: Decreased the space between variations and the add to cart button.
* Update: Decreased featured image bottom space.
* Update: Mobile view of the "Frequently Bought Together" section on the product single page.
* Update: Decreased space between variation and add to cart.
* Update: Prev Next icons not visible on single page in both PC and mobile.
* Update: Decrease line height of the Bottom footer text in mobile view.