@@ -6444,7 +6444,6 @@ margin:15px 0px;;
 .single-product .social-share ul{
   margin: 0;
   display: flex;
-  align-items: center;
 }
 .single-product .social-share h3{
 margin-bottom:15px;
@@ -6489,6 +6488,10 @@ border-color: #0177B5;
 }*/
 .single-product .social-share a svg{
   fill: #535050;
+}
+.copy-product-link{
+  background: transparent;
+  color: #535050;
 }
 /*** tooltip  */
 .tooltip-show-with-title {
